--- a/0003.ipynb
+++ b/0003.ipynb
@@ -20,9 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|      Hello Pythonistas       |\n"
+     ]
+    }
+   ],
    "source": [
     "message = ' Hello Pythonistas '\n",
     "fill = \"\"\n",
@@ -33,9 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mestou armando vocês\n"
+     ]
+    }
+   ],
    "source": [
     "def print_in_red(message: str) -> None:\n",
     "    print(f'\\33[31m{message}')\n",
@@ -48,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,29 +139,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Students -- Grade ---- Status\n",
-      "N ----- 0.3 ------ Sad but true, you reproved\n",
-      "o ----- 3.5 ------ Sad but true, you reproved\n",
-      "r ----- 9.3 ------ Sad but true, you reproved\n",
-      "a ----- 4.7 ------ Sad but true, you reproved\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "string index out of range",
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (1089611551.py, line 34)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m grades[index] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m:\n\u001b[1;32m     12\u001b[0m                 status \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSad but true, you reproved\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 13\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43maluno\u001b[49m\u001b[43m[\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ----- \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgrades[index]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ------ \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstatus\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     15\u001b[0m alunos_filtrados \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m40\u001b[39m):\n",
-      "\u001b[0;31mIndexError\u001b[0m: string index out of range"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[78], line 34\u001b[0;36m\u001b[0m\n\u001b[0;31m    if 'status' in aluno:\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
      ]
     }
    ],
@@ -158,34 +160,39 @@
     "            \"Emma\", \"Finn\", \"Gabriella\", \"Hannah\", \"Ian\", \"Jessica\", \"Kevin\", \"Lily\", \"Michael\"]\n",
     "grades = [round(random.uniform(0, 10), 1) for _ in range(40)]\n",
     "\n",
-    "print(f\"Students -- Grade ---- Status\")     \n",
-    "for index in range(0,40):\n",
-    "        if grades[index] >= 5:\n",
-    "                status = \"Sad but true, you reproved\"\n",
-    "        print(f\"{aluno[index]} ----- {grades[index]} ------ {status}\")\n",
-    "  \n",
+    "\n",
+    "def print_in_red(message: str) -> None:\n",
+    "    print(f'\\33[31m{message}')\n",
+    "\n",
+    "def print_in_green(message: str) -> None:\n",
+    "    print(f'\\33[32m{message}')\n",
+    "\n",
+    "print_in_green('aprovados')\n",
+    "print_in_red('reprovados')\n",
+    "\n",
+    "message_1 = 'alunos'\n",
+    "mes_ = 'grades'\n",
+    "mess_ = 'status'\n",
+    "\n",
+    "fill = \"\"\n",
+    "align = \"^\" \n",
+    "width = 40\n",
+    "print(f'|{message_1:{fill}{align}{width}}{mes_:{fill}{align}{width}}{mess_:{fill}{align}{width}}|')\n",
     "alunos_filtrados = []\n",
     " \n",
-    "for index in range(0,40):\n",
-    "    aluno = alunos[index]\n",
+    "for alunos in notas(0,40):\n",
+    "    notas = alunos[index]\n",
+    "    media = (soma + notas)/6 \n",
+    "        \n",
     "    if grades[index] >= 6:\n",
-    "       alunos_filtrados.append(aluno)\n",
-    "\n",
-    "print(alunos_filtrados)"
+    "        if 'status' in aluno:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Students -- Grade ---- Status\n"
-     ]
-    },
     {
      "ename": "NameError",
      "evalue": "name 'students' is not defined",
@@ -193,7 +200,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[27], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m grades[index] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m:\n\u001b[1;32m      4\u001b[0m                 status \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSad but true, you reproved\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mstudents\u001b[49m[index]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ----- \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgrades[index]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ------ \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstatus\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m----------------\u001b[39m\u001b[38;5;124m\"\u001b[39m) \n\u001b[1;32m      7\u001b[0m soma \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m \n",
+      "Cell \u001b[0;32mIn[71], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      5\u001b[0m                 status \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSad but true, you reproved\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 6\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mstudents\u001b[49m[index]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ----- \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgrades[index]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ------ \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstatus\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m----------------\u001b[39m\u001b[38;5;124m\"\u001b[39m) \n\u001b[1;32m      9\u001b[0m soma \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m \n",
       "\u001b[0;31mNameError\u001b[0m: name 'students' is not defined"
      ]
     }
@@ -201,47 +208,7 @@
    "source": [
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "     \n",
-    "print(f\"Students -- Grade ---- Status\")     \n",
-    "for index in range(0,40):\n",
-    "        if grades[index] >= 5:\n",
-    "                status = \"Sad but true, you reproved\"\n",
-    "        print(f\"{students[index]} ----- {grades[index]} ------ {status}\")\n",
-    "print (f\"----------------\") \n",
-    "soma = 0 \n",
-    "for g in grades:\n",
-    "    soma = soma + g\n",
-    "media =soma/40\n",
-    "if media >= 6:\n",
-    "        status = 'Congratulations, your class is good'\n",
-    "else:\n",
-    "        status = \"Dawn guys, you need to improve\"\n",
-    "print(f\"Class media is {media} and {status}\")\n",
-    "\n",
-    "alunos_filtrados = []\n",
-    "for aluno in alunos:\n",
-    "    if 'M' in aluno:\n",
-    "        alunos_filtrados.append(aluno)\n",
-    "        students_filtrados = []\n",
-    "for students in students:\n",
-    "    if 'M' in students:\n",
-    "        students_filtrados.append(students)\n",
-    "print(students_filtrados)\n",
-    "print(alunos_filtrados)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "     \n",
-    "print(f\"Students -- Grade ---- Status\")     \n",
+    "        \n",
     "for index in range(0,40):\n",
     "        if grades[index] >= 5:\n",
     "                status = 'Congratulations, you passed!'\n",
@@ -249,6 +216,7 @@
     "                status = \"Sad but true, you reproved\"\n",
     "        print(f\"{students[index]} ----- {grades[index]} ------ {status}\")\n",
     "print (f\"----------------\") \n",
+    "\n",
     "soma = 0 \n",
     "for g in grades:\n",
     "    soma = soma + g\n",
@@ -262,28 +230,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Students -- Grade ---- Status\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'students' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[25], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      6\u001b[0m                 status \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSad but true, you reproved\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 7\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mstudents\u001b[49m[index]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ----- \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgrades[index]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ------ \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstatus\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m----------------\u001b[39m\u001b[38;5;124m\"\u001b[39m) \n\u001b[1;32m      9\u001b[0m soma \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m \n",
-      "\u001b[0;31mNameError\u001b[0m: name 'students' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
