--- a/leticia/leticia_0003.ipynb
+++ b/leticia/leticia_0003.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,9 +123,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (1089611551.py, line 34)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[78], line 34\u001b[0;36m\u001b[0m\n\u001b[0;31m    if 'status' in aluno:\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -139,7 +148,27 @@
     "    print(f'\\33[31m{message}')\n",
     "\n",
     "def print_in_green(message: str) -> None:\n",
-    "    print(f'\\33[32m{message}')"
+    "    print(f'\\33[32m{message}')\n",
+    "\n",
+    "print_in_green('aprovados')\n",
+    "print_in_red('reprovados')\n",
+    "\n",
+    "message_1 = 'alunos'\n",
+    "mes_ = 'grades'\n",
+    "mess_ = 'status'\n",
+    "\n",
+    "fill = \"\"\n",
+    "align = \"^\" \n",
+    "width = 40\n",
+    "print(f'|{message_1:{fill}{align}{width}}{mes_:{fill}{align}{width}}{mess_:{fill}{align}{width}}|')\n",
+    "alunos_filtrados = []\n",
+    " \n",
+    "for alunos in notas(0,40):\n",
+    "    notas = alunos[index]\n",
+    "    media = (soma + notas)/6 \n",
+    "        \n",
+    "    if grades[index] >= 6:\n",
+    "        "
    ]
   }
  ],
@@ -159,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
