Notas da aula 0004

--- a/0004.ipynb
+++ b/0004.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,10 +61,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Os primeiros livros de cada saga são: Harry Potter e a Pedra Filosofal, O Hobbit e Crepúsculo\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Primeiro livro\n",
+    "\n",
+    "\n",
+    "print(f\"Os primeiros livros de cada saga são: {livros_harry_potter[0]}, {livprimeiro_livro_hp = livros_harry_potter[0]ros_tolkien[0]} e {livros_twilight[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Os segundos livros de cada saga são: Harry Potter e a Câmara Secreta, A Sociedade do Anel e Lua Nova\n"
+     ]
+    }
+   ],
+   "source": [
+    "# segundo livro\n",
+    "segundo_livro_hp = livros_harry_potter[1]\n",
+    "\n",
+    "print(f\"Os segundos livros de cada saga são: {livros_harry_potter[1]}, {livros_tolkien[1]} e {livros_twilight[1]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Os quintos livros de cada saga são: Harry Potter e a Ordem da Fênix, O Silmarillion\n",
+      "O ultimo livro do Twilight é Amanhecer\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mini challenge\n",
+    "quinto_livro_hp = livros_harry_potter[4]\n",
+    "print(f\"Os quintos livros de cada saga são: {livros_harry_potter[4]}, {livros_tolkien[4]}\")\n",
+    "\n",
+    "ultimo_livro_tw = livros_twilight[3]\n",
+    "print(f'O ultimo livro do Twilight é {ultimo_livro_tw}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Harry Potter e as Relíquias da Morte\n",
+      "O número de livro da saga tolkien é: 7\n",
+      "O ultimo livro do tolkien é Os Filhos de Húrin\n",
+      "O último livro de twilight é: Amanhecer\n"
+     ]
+    }
+   ],
+   "source": [
+    "# último livro\n",
+    "\n",
+    "ultimo_livro_hp = livros_harry_potter[-1]\n",
+    "print(ultimo_livro_hp)\n",
+    "\n",
+    "# len quantidade de itens da lista\n",
+    "\n",
+    "numero_de_livros = len(livros_tolkien)\n",
+    "print(f\"O número de livro da saga tolkien é: {numero_de_livros}\")\n",
+    "\n",
+    "ultimo_livro_tolk = livros_tolkien[numero_de_livros-1]\n",
+    "print(f'O ultimo livro do tolkien é {ultimo_livro_tolk}')\n",
+    "\n",
+    "# como  fazer sem o len\n",
+    "counter = 0\n",
+    "for livro in livros_twilight:\n",
+    "    counter = counter + 1\n",
+    "ultimo_livro_tw = livros_twilight[counter-1]\n",
+    "print(f\"O último livro de twilight é: {ultimo_livro_tw}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O penúltimo livro de twilight é: Eclipse\n",
+      "O penultimo livro do twilight é Eclipse\n",
+      "Eclipse\n"
+     ]
+    }
+   ],
+   "source": [
+    "# penúltimo\n",
+    "counter = 0\n",
+    "for livro in livros_twilight:\n",
+    "    counter = counter + 1\n",
+    "penultimo_livro_tw = livros_twilight[counter-2]\n",
+    "print(f\"O penúltimo livro de twilight é: {penultimo_livro_tw}\")\n",
+    "\n",
+    "\n",
+    "#com len\n",
+    "numero_de_livros = len(livros_twilight)\n",
+    "penultimo_livro_tw = livros_twilight[numero_de_livros-2]\n",
+    "print(f'O penultimo livro do twilight é {penultimo_livro_tw}')\n",
+    "\n",
+    "#simples\n",
+    "penultimo_livro_tw = livros_twilight[-2]\n",
+    "print(penultimo_livro_tw)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O número de livro da saga twilight é: 4\n",
+      "O número de livro da saga tolkien é: 7\n",
+      "O número de livro da saga HP é: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Quantos livros cada saga possui\n",
+    "numero_de_livros_tw = len(livros_twilight)\n",
+    "numero_de_livros_tolk = len(livros_tolkien)\n",
+    "numero_de_livros_hp = len(livros_harry_potter)\n",
+    "print(f\"O número de livro da saga twilight é: {numero_de_livros_tw}\")\n",
+    "print(f\"O número de livro da saga tolkien é: {numero_de_livros_tolk}\")\n",
+    "print(f\"O número de livro da saga harry_potter é: {numero_de_livros_hp}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Qual o livro do meio?\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "counter = 0\n",
+    "for livro in livros_twilight:\n",
+    "    counter = (counter - 0)\n",
+    "    ultimo_livro_tw = livros_twilight[counter]\n",
+    "print(f\"O do meio livro de twilight é: {meio_livro_tw}\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
