Pequenos reparos no notebook da aula 0004

--- a/0004.ipynb
+++ b/0004.ipynb
@@ -220,20 +220,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Qual o livro do meio?\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "counter = 0\n",
     "for livro in livros_twilight:\n",
-    "    counter = (counter - 0)\n",
-    "    ultimo_livro_tw = livros_twilight[counter]\n",
-    "print(f\"O do meio livro de twilight é: {meio_livro_tw}\")\n",
-    "\n"
+    "    counter = (counter + 1)\n",
+    "\n",
+    "meio_livro_tw = counter # FIX THIS\n",
+    "print(f\"O do meio livro de twilight é: {meio_livro_tw}\")\n"
    ]
   },
   {
@@ -263,7 +262,7 @@
     "\n",
     "### DICA\n",
     "\n",
-    "Utilize a função `sorted_livro` para determinar qual livro a pessoa irá alugar\n"
+    "Utilize a função `sortear_livro` para determinar qual livro a pessoa irá alugar\n"
    ]
   },
   {
