--- a/juliana/juliana_notebook.ipynb
+++ b/juliana/juliana_notebook.ipynb
@@ -37,14 +37,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|\u001b[35m\u001b[1m\u001b[47m                  try                   \u001b[0m|\n"
+      "|\u001b[35m\u001b[1m\u001b[47m                  try                   \u001b[0m|\n",
+      "__________________try___________________\n"
      ]
     }
    ],
@@ -55,7 +56,16 @@
     "color = \"\\33[35m\"\n",
     "style = \"\\33[1m\"\n",
     "background = \"\\33[47m\"\n",
-    "print(f'|{color}{style}{background}{message0:{align}{width}}\\033[0m|')"
+    "print(f'|{color}{style}{background}{message0:{align}{width}}\\033[0m|')\n",
+    "\n",
+    "print(f\"{message0:_^40}\")\n",
+    "\n",
+    "def main():\n",
+    "    today = datetime.datetime.now #porque nao tem datetime?\n",
+    "    print(f\"Today is: {today}\")\n",
+    "    print(f\"{today:%d-%m-%Y %H:%M %A}\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -68,48 +78,48 @@
      "output_type": "stream",
      "text": [
       "|                 Alunos                                  Notas                                   Status                 |\n",
-      "|                 Alice                                    9.1                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                  Bob                                     9.1                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                Charlie                                   2.7                   \u001b[32m                 Failed                 \u001b[0m|\n",
-      "|                 David                                    5.1                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                  Eve                                     5.5                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                 Frank                                    4.9                   \u001b[32m                 Failed                 \u001b[0m|\n",
-      "|                 Grace                                    5.3                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                 Henry                                    6.9                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                 Isabel                                   7.1                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                  Jack                                    3.1                   \u001b[32m                 Failed                 \u001b[0m|\n",
-      "|                 Katie                                    9.5                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                  Liam                                    8.1                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                  Mia                                     0.2                   \u001b[32m                 Failed                 \u001b[0m|\n",
-      "|                  Noah                                    6.3                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                 Olivia                                   4.9                   \u001b[32m                 Failed                 \u001b[0m|\n",
-      "|                Patrick                                   9.2                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                 Quinn                                    6.5                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                 Rachel                                   7.9                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                  Sam                                     3.9                   \u001b[32m                 Failed                 \u001b[0m|\n",
-      "|                  Tina                                    3.9                   \u001b[32m                 Failed                 \u001b[0m|\n",
-      "|                 Ursula                                   9.1                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                 Alice                                    6.6                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                  Bob                                     0.3                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                Charlie                                   6.0                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                 David                                    8.5                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                  Eve                                     1.4                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                 Frank                                    3.4                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                 Grace                                    5.9                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                 Henry                                    2.1                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                 Isabel                                   6.6                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                  Jack                                    2.1                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                 Katie                                    5.1                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                  Liam                                    9.2                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                  Mia                                     4.9                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                  Noah                                    9.7                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                 Olivia                                   6.5                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                Patrick                                   4.3                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                 Quinn                                    1.1                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                 Rachel                                   2.7                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                  Sam                                     7.9                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                  Tina                                    7.7                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                 Ursula                                   3.6                   \u001b[32m                 Failed                 \u001b[0m|\n",
       "|                 Victor                                   5.6                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                 Wendy                                    3.0                   \u001b[32m                 Failed                 \u001b[0m|\n",
-      "|                 Xander                                   2.9                   \u001b[32m                 Failed                 \u001b[0m|\n",
-      "|                 Yvonne                                   7.5                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                  Zack                                    5.9                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                 Amelia                                   1.4                   \u001b[32m                 Failed                 \u001b[0m|\n",
-      "|                  Ben                                     8.0                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|               Catherine                                  2.6                   \u001b[32m                 Failed                 \u001b[0m|\n",
-      "|                 Daniel                                   4.5                   \u001b[32m                 Failed                 \u001b[0m|\n",
-      "|                  Emma                                    8.0                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                  Finn                                    8.6                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|               Gabriella                                  7.4                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                 Hannah                                   5.1                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                  Ian                                     3.4                   \u001b[32m                 Failed                 \u001b[0m|\n",
-      "|                Jessica                                   2.7                   \u001b[32m                 Failed                 \u001b[0m|\n",
-      "|                 Kevin                                    3.8                   \u001b[32m                 Failed                 \u001b[0m|\n",
-      "|                  Lily                                    8.6                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                Michael                                   7.7                   \u001b[31m                 Passed                 \u001b[0m|\n",
-      "|                  Nora                                    6.3                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                 Wendy                                    4.5                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                 Xander                                   9.6                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                 Yvonne                                   7.3                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                  Zack                                    9.0                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                 Amelia                                   9.0                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                  Ben                                     1.7                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|               Catherine                                  2.5                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                 Daniel                                   6.3                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                  Emma                                    2.6                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                  Finn                                    1.7                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|               Gabriella                                  1.4                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                 Hannah                                   7.2                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                  Ian                                     4.9                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                Jessica                                   1.3                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                 Kevin                                    5.2                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                  Lily                                    5.6                   \u001b[31m                 Passed                 \u001b[0m|\n",
+      "|                Michael                                   4.8                   \u001b[32m                 Failed                 \u001b[0m|\n",
+      "|                  Nora                                    5.0                   \u001b[31m                 Passed                 \u001b[0m|\n",
       " ................................................................................................................................. \n",
-      "|                                      Class media is 5.782500000000001 and \u001b[31mPassed\u001b[0m                                       |\n"
+      "|                                             Class media is 5.02 and \u001b[31mPassed\u001b[0m                                             |\n"
      ]
     }
    ],
@@ -158,21 +168,25 @@
      "output_type": "stream",
      "text": [
       "\u001b[31m|           Alunos reprovados                             Notas                  |\u001b[0m\n",
-      "|                Charlie                                   2.7                   |\n",
-      "|                 Frank                                    4.9                   |\n",
-      "|                  Jack                                    3.1                   |\n",
-      "|                  Mia                                     0.2                   |\n",
-      "|                 Olivia                                   4.9                   |\n",
-      "|                  Sam                                     3.9                   |\n",
-      "|                  Tina                                    3.9                   |\n",
-      "|                 Wendy                                    3.0                   |\n",
-      "|                 Xander                                   2.9                   |\n",
-      "|                 Amelia                                   1.4                   |\n",
-      "|               Catherine                                  2.6                   |\n",
-      "|                 Daniel                                   4.5                   |\n",
-      "|                  Ian                                     3.4                   |\n",
-      "|                Jessica                                   2.7                   |\n",
-      "|                 Kevin                                    3.8                   |\n"
+      "|                  Bob                                     0.3                   |\n",
+      "|                  Eve                                     1.4                   |\n",
+      "|                 Frank                                    3.4                   |\n",
+      "|                 Henry                                    2.1                   |\n",
+      "|                  Jack                                    2.1                   |\n",
+      "|                  Mia                                     4.9                   |\n",
+      "|                Patrick                                   4.3                   |\n",
+      "|                 Quinn                                    1.1                   |\n",
+      "|                 Rachel                                   2.7                   |\n",
+      "|                 Ursula                                   3.6                   |\n",
+      "|                 Wendy                                    4.5                   |\n",
+      "|                  Ben                                     1.7                   |\n",
+      "|               Catherine                                  2.5                   |\n",
+      "|                  Emma                                    2.6                   |\n",
+      "|                  Finn                                    1.7                   |\n",
+      "|               Gabriella                                  1.4                   |\n",
+      "|                  Ian                                     4.9                   |\n",
+      "|                Jessica                                   1.3                   |\n",
+      "|                Michael                                   4.8                   |\n"
      ]
     }
    ],
@@ -191,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
