--- a/juliana/juliana_notebook.ipynb
+++ b/juliana/juliana_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,20 @@
       "\u001b[1m     Quantos livros cada um possui:\u001b[0m\n",
       "     Saga twilight: 4\n",
       "     Saga tolkien: 7\n",
-      "     Saga harry_potter: 7\n"
+      "     Saga harry_potter: 7\n",
+      "A pessoa: Eduardo , Alugou o livro: O Retorno do Rei\n",
+      "16\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'list' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[68], line 125\u001b[0m\n\u001b[0;32m    123\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m livro_alugado \u001b[38;5;129;01min\u001b[39;00m livros:\n\u001b[0;32m    124\u001b[0m     livro_alugado \u001b[38;5;241m=\u001b[39m sortear_livro \u001b[38;5;129;01min\u001b[39;00m livros\n\u001b[1;32m--> 125\u001b[0m     livros_restantes \u001b[38;5;241m=\u001b[39m \u001b[43mlivros\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mlivro_alugado\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m    126\u001b[0m     \u001b[38;5;28mprint\u001b[39m(livros_restantes)\n\u001b[0;32m    128\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m16\u001b[39m):\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'list'"
      ]
     }
    ],
@@ -117,12 +130,72 @@
     "print(f\"     Saga twilight: {numero_de_livros_tw}\")\n",
     "print(f\"     Saga tolkien: {numero_de_livros_tolk}\")\n",
     "print(f\"     Saga harry_potter: {numero_de_livros_hp}\")\n",
+    "\n",
+    "\n",
+    "#desafio final\n",
+    "import random \n",
+    "livros = [\n",
+    "    \"Harry Potter e a Pedra Filosofal\",\n",
+    "    \"Harry Potter e a Câmara Secreta\",\n",
+    "    \"Harry Potter e o Prisioneiro de Azkaban\",\n",
+    "    \"Harry Potter e o Cálice de Fogo\",\n",
+    "    \"Harry Potter e a Ordem da Fênix\",\n",
+    "    \"Harry Potter e o Enigma do Príncipe\",\n",
+    "    \"Harry Potter e as Relíquias da Morte\"\n",
+    "    \"O Hobbit\",\n",
+    "    \"A Sociedade do Anel\",\n",
+    "    \"As Duas Torres\",\n",
+    "    \"O Retorno do Rei\",\n",
+    "    \"O Silmarillion\",\n",
+    "    \"Contos Inacabados\",\n",
+    "    \"Os Filhos de Húrin\"\n",
+    "    \"Crepúsculo\",\n",
+    "    \"Lua Nova\",\n",
+    "    \"Eclipse\",\n",
+    "    \"Amanhecer\"\n",
+    "]\n",
+    "\n",
+    "pessoas = [\"Ana\", \"Bruno\", \"Carlos\", \"Diana\", \"Eduardo\", \"Fernanda\", \"Gustavo\", \"Helena\", \"Igor\", \"Julia\"]\n",
+    "saldo = 0\n",
+    "\n",
+    "def sortear_livro(livros: list[str]) -> str:\n",
+    "    return random.choice(livros)\n",
+    "\n",
+    "print ('A pessoa: ' + pessoas [ random.randrange ( len ( pessoas ))],\n",
+    "      ', Alugou o livro: ' + livros [ random.randrange ( len ( livros ))] )\n",
+    "\n",
+    "numero_de_livros_totais= len(livros)\n",
+    "print(numero_de_livros_totais)\n",
+    "\n",
+    "for livro_alugado in livros:\n",
+    "    livro_alugado = sortear_livro in livros\n",
+    "    livros_restantes = livros -[livro_alugado]\n",
+    "    print(livros_restantes)\n",
+    "\n",
+    "for index in range(0,16):\n",
+    "    livro_alugado = livros [ random.randrange ( len ( livros ))]\n",
+    "    if livro_alugado in livros:\n",
+    "        livros = livros [-livro_alugado]\n",
+    "        print(f'O livro alugado foi {livro_alugado} e ele está indisponível')\n",
+    "    else:\n",
+    "        print(\"teste\")\n",
+    "   # livros_restantes = livros [-livro_alugado] aaaaaa n vai pq é str\n",
+    "\n",
+    "print(livro_alugado)\n",
+    "def alugar_livros():\n",
+    "\n",
+    "    # preencher desafio aqui\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "alugar_livros()\n",
+    "print(f\"Saldo final da biblioteca é de R$ {saldo:.2f}\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +230,6 @@
     "numero_de_livros_tolk = len(livros_tolkien)\n",
     "numero_tolk_div = numero_de_livros_tolk / 2\n",
     "livro_tolk_arredond = math.floor(numero_tolk_div)\n",
-    "livro_tk_meio = livro_tolk_arredond + 1\n",
     "livro_tolk_meio = livros_tolkien[-livro_tk_meio]\n",
     "\n",
     "if numero_tolk_div.is_integer():\n",
@@ -169,8 +241,7 @@
     "print(f\" {color_green}{style}Happy Potter\\033[0m\")\n",
     "numero_de_livros = len(livros_harry_potter)\n",
     "numero_hp_div = numero_de_livros_hp / 2\n",
-    "livro_hp_arredond = math.floor(numero_hp_div)\n",
-    "livro_hp_meio = livro_hp_arredond + 1\n",
+    "livro_hp_meio = math.ceil(numero_hp_div)\n",
     "livro_HP_meio = livros_harry_potter[-livro_hp_meio]\n",
     "\n",
     "if numero_hp_div.is_integer():\n",
